<resources>
    <string name="app_name">SampleBase</string>
    <string name="show_gallery">Show Gallery</string>
    <string name="add_log">Add Log</string>
    <string name="show_article_feed">Show Article Feed</string>
    <string name="add_image">Add Image</string>
    <string name="clear_content">Clear Content</string>
    <string name="start_one_pixel">Start One Pixel</string>
    <string name="show_keep_alive">Show Keep Alive</string>
    <string name="show_system_state_listener">Show System State Listener</string>
    <string name="start_aidl_service">Start AIDL Service</string>
    <string name="show_aidl_receiver">Show AIDL Receiver</string>
    <string name="set_name">Set Name</string>
    <string name="get_name">Get Name</string>
    <string name="start_db">Start DB</string>
    <string name="create_database">Create DataBase</string>
    <string name="add_entry">Add Entry</string>
    <string name="update_entry">Update Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="query_entry">Query Entry</string>
    <string name="show_database">Show DataBase</string>
    <string name="show_network">Show Network</string>
    <string name="show_setting">Show Setting</string>
    <string name="test">test</string>

</resources>
