<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/index_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/show_gallery"
            style="@style/BaseIndexButton"
            android:text="@string/show_gallery" />

        <Button
            android:id="@+id/show_article_feed"
            style="@style/BaseIndexButton"
            android:text="@string/show_article_feed" />

        <Button
            android:id="@+id/show_keep_alive"
            style="@style/BaseIndexButton"
            android:text="@string/show_keep_alive" />

        <Button
            android:id="@+id/show_system_state_listener"
            style="@style/BaseIndexButton"
            android:text="@string/show_system_state_listener" />

        <Button
            android:id="@+id/show_aidl_receiver"
            style="@style/BaseIndexButton"
            android:text="@string/show_aidl_receiver" />
    </LinearLayout>
</ScrollView>